# RAG-Chat

./: .gitignore  README.md
client/: index.html  package-lock.json
client/src/: App.tsx
client/src/components/chat/: input.tsx  layout.tsx  messages.tsx
client/src/components/common/: popover.tsx
client/src/components/nav/: index.tsx  sources-cta.tsx  sources-modal.tsx  sources-popover-cta.tsx  sources-popover.tsx
client/src/hooks/: useRAG.tsx
client/src/store/: index.ts
client/src/styles/: index.css
client/src/types/: index.ts
server/: README.md  main.py  models.py  pyproject.toml  rag_handler.py  settings.py  web_crawler.py
